2003-07-03  Vladimir Prus <ghost@cs.msu.su>

	* qm/test/web/web.py (ShowItemPage.MakeDeleteScript): Fix typo.

2003-06-27  Nathaniel Smith  <njs@codesourcery.com>

	* qm/test/classes/classes.qmc: Add
	pickle_result_source.PickleResultSource.

2003-06-24  Nathaniel Smith  <njs@codesourcery.com>

	* qm/test/result_source.py: New file.
	* qm/test/file_result_source.py: New file.
	* qm/test/classes/classes.qmc: Add XMLResultSource.
	* qm/test/base.py (load_results): Take a database argument,
	return a ResultSource. Use PickleResultSource/XMLResultSource.
	(load_outcomes): Take a database argument, use new
	load_results interface.
	(_result_from_dom): Move to...
	* qm/test/classes/xml_result_source.py: ...here.  New file.
	* qm/test/classes/pickle_result_source.py: New file.
	* qm/test/cmdline.py (qm.test.result.Result): import it.
	(QMTest.__ExecuteSummarize): Rewrite to	use new load_results
	interface.
	(QMTest.__GetExpectedOutcomes): Pass database to
	load_outcomes.
	(QMTest.__FilterTestsToRun): Likewise.
	* qm/test/web/web.py (QMTestServer.HandleSubmitExpectations):
	Likewise.
	(QMTestServer.HandleSubmitResults): Likewise.
	
2003-06-24  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/cmdline.py (commands_spec): Add support for "qmtest
	register --help".

2003-06-23  Nathaniel Smith  <njs@codesourcery.com>

	* qm/fields.py: Fix typo in comment.
	
	* qm/test/file_result_stream.py (FileResultStream.__doc__):
	Fix typo.

2003-06-23  Nathaniel Smith  <njs@codesourcery.com>

	* templates/Makefile: It's 2003 now.
	* templates/xml: Likewise.
	* templates/py: Likewise.
	* templates/html: Likewise.
	* templates/dtml: Likewise.
	* templates/docbook-chapter: Likewise.
	* templates/docbook: Likewise.

2003-06-22  Mark Mitchell  <mark@codesourcery.com>

	* qm/attachment.py (Attachment): Move to start of file.
	(AttachmentStore.Store): Simplify interface.
	(FileAttachmentStore.__init__): Remove.
	(FileAttachmentStore.Store): Adjust.